add a readme, fix a few bugs

--- a/me.dougal.conda-worker.plist
+++ b/me.dougal.conda-worker.plist
@@ -8,6 +8,7 @@
         <key>ProgramArguments</key>
         <array>
             <string>/Users/vagrant/conda-worker.sh</string>
+            <string>USERNAME/QUEUENAME</string> <!-- EDIT ME -->
         </array>
 
         <key>StandardOutPath</key>
